# padder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
benches/: bench_main.rs  index.html
benches/benchmarks/: format_whitespace_leftalign.rs  mod.rs  pad_and_push_to_buffer_wrapper_whitespace_center.rs  pad_whitespace_leftalign.rs  pad_whitespace_rightalign.rs  pad_wrapper_hyphen_rightalign.rs  pad_wrapper_whitespace_leftalign.rs
report/: index.html
report/format! ws 10 la/base/: estimates.json  tukey.json
report/format! ws 10 la/change/: estimates.json
report/format! ws 10 la/new/: benchmark.json  sample.json
report/format! ws 10 la/report/: index.html
report/format! ws 100 la/base/: benchmark.json
report/format! ws 100 la/change/: estimates.json
report/format! ws 100 la/new/: estimates.json  sample.json  tukey.json
report/format! ws 100 la/report/: index.html
report/format! ws 1000 la/base/: benchmark.json
report/format! ws 1000 la/change/: estimates.json
report/format! ws 1000 la/new/: estimates.json  sample.json  tukey.json
report/format! ws 1000 la/report/: index.html
report/format! ws 10000 la/base/: sample.json
report/format! ws 10000 la/change/: estimates.json
report/format! ws 10000 la/new/: benchmark.json  estimates.json  tukey.json
report/format! ws 10000 la/report/: index.html
report/pad wrapper hyphen 10 ra/base/: benchmark.json  estimates.json  sample.json  tukey.json
report/pad wrapper hyphen 10 ra/report/: index.html
report/pad wrapper hyphen 100 ra/base/: sample.json  tukey.json
report/pad wrapper hyphen 100 ra/new/: benchmark.json  estimates.json
report/pad wrapper hyphen 100 ra/report/: index.html
report/pad wrapper hyphen 1000 ra/base/: benchmark.json  sample.json  tukey.json
report/pad wrapper hyphen 1000 ra/new/: estimates.json
report/pad wrapper hyphen 1000 ra/report/: index.html
report/pad wrapper hyphen 10000 ra/base/: benchmark.json  estimates.json  sample.json  tukey.json
report/pad wrapper hyphen 10000 ra/report/: index.html
report/pad wrapper ws 10 la/base/: sample.json  tukey.json
report/pad wrapper ws 10 la/change/: estimates.json
report/pad wrapper ws 10 la/new/: benchmark.json  estimates.json
report/pad wrapper ws 10 la/report/: index.html
report/pad ws 10 la/base/: sample.json  (+2 more)
src/: lib.rs
(+63 files in other folders)
