[package]
name = "padder"
version = "0.1.1"
edition = "2021"
description = "Efficient data formatting and padding, done right, the rusty way."
authors = [
    "Wilhelm Ågren <wilhelmagren98@gmail.com>",
]

readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/firelink-data/padder"
repository = "https://github.com/firelink-data/padder"

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[lib]
name = "padder"
path = "src/lib.rs"
test = true
bench = true
crate-type = [ "lib" ]

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_main"
harness = false
