[package]
name = "padder"
version = "1.1.0"
edition = "2021"
description = "Highly efficient data and string formatting library for Rust."
authors = [
    "Wilhelm Ågren <wilhelmagren98@gmail.com>",
]

readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/firelink-data/padder"
repository = "https://github.com/firelink-data/padder"

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[lib]
name = "padder"
path = "src/lib.rs"
test = true
bench = true
crate-type = [ "lib" ]

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_main"
harness = false
